kube/pod-ml.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ml
  labels:
    app: ml
spec:
  containers:
  - image: nginx:1.12
    name: nginx
    ports:
    - containerPort: 80
