kube/pod-weather.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-weather
  labels:
    app: weather
spec:
  containers:
  - image: nginx:1.12
    name: nginx
    ports:
    - containerPort: 80
