kube/service-ml.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-ml
spec:
  ports:
  - port: 80
    targetPort: 50
  selector:
    app: ml
  type: ClusterIP
