kube/service-rbc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-rbc
spec:
  ports:
  - port: 80
    targetPort: 60
  selector:
    app: rbc
  type: ClusterIP
