kube/service-weather.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-weather
spec:
  ports:
  - port: 80
    targetPort: 70
  selector:
    app: weather
  type: ClusterIP
